<resources>
    <string name="app_name_en">Just Like</string>
    <string name="app_notice">提示</string>
    <string name="app_delete_image_forever">图片将从设备中删除</string>
    <string name="app_delete_collection_forever">集合将从设备中删除</string>
    <string name="app_delete_from_collection">图片将从集合中删除</string>
    <string name="app_cancel">取消</string>
    <string name="app_confirm">确定</string>
    <string name="app_create_collection">创建集合</string>
    <string name="app_collection_need_name">集合需要一个名字</string>
    <string name="app_collection_exists">集合已存在，换个名字吧</string>
    <string name="app_type_collection_name_first">请先输入集合名字</string>
    <string name="app_set_wallpaper">设置壁纸</string>
    <string name="app_fit_screen">适应屏幕</string>
    <string name="app_free_crop">自由裁剪</string>

    <!-- Bugly -->
    <string name="app_beta_upgrade_banner">beta_upgrade_banner</string>
    <string name="app_beta_title">beta_title</string>
    <string name="app_beta_upgrade_info">beta_upgrade_info</string>
    <string name="app_beta_upgrade_feature">beta_upgrade_feature</string>
    <string name="app_beta_cancel_button">beta_cancel_button</string>
    <string name="app_beta_confirm_button">beta_confirm_button</string>
    <string name="app_beta_tip_message">beta_tip_message</string>
    <string name="app_next_time">下次再说</string>
    <string name="app_upgrade_right_now">立即更新</string>
    <string name="app_parsing">解析中…</string>
    <string name="app_exit_when_click_again">再按一次退出</string>
    <string name="app_version_name">版本号</string>
    <string name="app_exit_login">退出登录</string>

    <!-- 热修复对话框 -->
    <string name="app_find_update">检测到更新</string>
    <string name="app_restart_to_update">是否重启应用完成更新？</string>
    <string name="app_later">稍后</string>
    <string name="app_restart_right_now">重启应用</string>
</resources>
