<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00FFFFFF"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="16dp"
        tools:ignore="RtlHardcoded">

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/app_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:textSize="@dimen/base_text_hlarge"
                android:text="@string/app_create_collection"
                tools:text="创建集合"/>

            <EditText
                android:id="@+id/app_et_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/base_black_shallow"
                android:textSize="@dimen/base_text_large"
                android:hint="@string/app_collection_need_name"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="16dp"
                android:background="@color/base_black_divider_shallow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/app_btn_left"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColor="@color/base_black_hint"
                    android:textSize="@dimen/base_text_large"
                    android:text="@string/app_cancel"
                    tools:text="取消"/>

                <View
                    android:layout_width="0.7dp"
                    android:layout_height="match_parent"
                    android:background="@color/base_black_divider_shallow" />

                <Button
                    android:id="@+id/app_btn_right"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/base_text_large"
                    android:text="@string/app_confirm"
                    tools:text="确定"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>